--- a/client/css/style_home.css
+++ b/client/css/style_home.css
@@ -91,7 +91,7 @@ body, html {
 
 .dropdown-content {
     background-color: #f9f9f9;
-    min-width: 160px;
+    width: 100%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
