--- a/client/css/style_profile.css
+++ b/client/css/style_profile.css
@@ -1,9 +1,3 @@
-/* Reset default margin and padding */
-body, html {
-    margin: 0;
-    padding: 0;
-}
-
 /* Full-width section for the title */
 .title-section {
     width: 100%;
@@ -34,88 +28,114 @@ body, html {
     color: red; /* change to desired color */
 }
 
-/* Container for the three sections */
-.container {
+
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+
+.attr_all {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+body {
+    background-color: #f3f3f3;
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 450px;
     display: flex;
-    height: calc(100vh - 40px); /* Subtract height of title-section */
+    box-shadow: 0 1px 20px 0 rgba(69,90,100,.08);
 }
 
-/* Left section */
-.left-section {
-    flex: 1;
-    background-color: #e6ffff;
-    padding: 20px;
-}
-
-/* Profile button */
-.profile-btn {
-    display: block;
-    margin-bottom: 10px;
+.wrapper .left {
+    width: 35%;
+    background: linear-gradient(to right,#01a9ac,#01dbdf);
+    padding: 30px 25px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    text-align: center;
     color: #fff;
-    text-decoration: none;
-    background-color: #002147;
-    padding: 10px 20px;
+}
+
+.wrapper .left img {
     border-radius: 5px;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.profile-btn:hover {
-    color: red; /* change to desired color */
-}
-
-/* Dropdown */
-.dropdown {
-    position: relative;
     margin-bottom: 10px;
 }
 
-/* CSS for drop-down buttons */
-.dropdown-btn {
-    color: #fff;
-    color: #fff;
-    display: block;
-    background-color: #002147;
-    padding: 10px;
-    padding: 14px 20px;
-    border-radius: 5px;
-    font-weight: bold;
-    font-size: 18px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    width: 100%;
-    text-align: left;
-    margin-top: 10px;
+.wrapper .left h4 {
+    margin-bottom: 10px;
 }
 
-.dropdown-content {
-    background-color: #f9f9f9;
-    width: 100%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+.wrapper .left p {
+    font-size: 12px;
 }
 
-.dropdown-content a {
-    color: #333;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+.wrapper .right {
+    width: 65%;
+    background: #fff;
+    padding: 30px 25px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
-.dropdown-content a:hover {
-    background-color: #3498db;
-    color: #fff;
+.wrapper .right .info,
+.wrapper .right .projects {
+    margin-bottom: 25px;
 }
 
-/* Middle section */
-.middle-section {
-    flex: 3;
-    background-color: #ebebfa;
-    padding: 20px;
-    min-height: 0;
-    overflow: auto;
+.wrapper .right .info h3,
+.wrapper .right .projects h3 {
+    margin-bottom: 15px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #e0e0e0;
+    color: #353c4e;
+    text-transform: uppercase;
+    letter-spacing: 5px;
 }
+
+.wrapper .right .info_data,
+.wrapper .right .projects_data {
+    display: flex;
+    justify-content: space-between;
+}
+
+.wrapper .right .info_data .data,
+.wrapper .right .projects_data .data {
+    width: 60%;
+}
+
+.wrapper .right .info_data .data h4,
+.wrapper .right .projects_data .data h4 {
+    color: #353c4e;
+    margin-bottom: 5px;
+}
+
+.wrapper .right .info_data .data p,
+.wrapper .right .projects_data .data p {
+    font-size: 13px;
+    margin-bottom: 10px;
+    color: #919aa3;
+}
+
+.my-posts-section {
+    margin: 50% 25% 1% 25%;
+}
+
+.my-posts-label {
+    background-color: aquamarine;
+    text-align: center;
+}
+
+
+
 
 /* CSS for post blocks */
 .post-block {
@@ -263,6 +283,16 @@ body, html {
     margin: 5px 0;
 }
 
+.post-inputs {
+    border: none;
+    width: 90%;
+}
+
+textarea {
+    font-size: 16px;
+    resize: none;
+}
+
 .avatar-img {
     width: 100%;
     height: 100%;
@@ -289,58 +319,6 @@ body, html {
     max-width: 150px;
 }
 
-.upload-post-block {
-    padding-left: 30px;
-    margin-bottom: 20px;
-}
-
-.upload-post-image {
-    max-height: 150px;
-    height: auto;
-    margin-top: 10px;
-}
-
-.post-inputs {
-    border: none;
-    width: 90%;
-}
-
-input[name="title"] {
-    font-size: 24px;
-    font-weight: bold;
-}
-
-textarea {
-    font-size: 16px;
-    resize: none;
-}
-
-.upload-image-label {
-    display: inline-block;
-    color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.upload-image-icon {
-    display:  block;
-    width: auto;
-    max-height: 30px;
-    margin-right: 10px;
-    margin-bottom: 3px;
-    vertical-align: middle;
-}
-
-#post-image {
-    position: absolute;
-    left: -9999px;
-}
-
-#post-image:focus + .upload-image-label {
-    box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.5);
-    outline: none;
-}
-
 .upload-post-button {
     display: inline-block;
     padding: 10px 20px;
@@ -353,16 +331,6 @@ textarea {
     cursor: pointer;
     transition: all 0.3s ease;
     margin-top: 10px;
-}
-
-.upload-post-button:hover {
-    color: #fff;
-    background-color: #007bff;
-}
-
-.upload-post-button:active {
-    background-color: #286090;
-    box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
 
 /* COMMENTS */
@@ -395,31 +363,4 @@ textarea {
 .comment-text {
     max-height: 200px;
     height: auto;
-}
-
-/* Right section */
-.right-section {
-    flex: 1;
-    background-color: #ffe6e6;
-    padding: 20px;
-}
-
-/* CSS for notification blocks */
-.notification-blocks {
-    margin-top: 10px;
-}
-
-.notification-block {
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    padding: 10px;
-    margin-bottom: 10px;
-}
-
-.notification-block h3 {
-    margin-top: 0;
-}
-
-.notification-block p {
-    margin-bottom: 0;
 }
